<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ChangeProfile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="15dp"
        android:background="@color/smokeyWhite">
        <TextView
            android:id="@+id/tv_uploadPicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_your_profile_picture"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

         <Button
            android:id="@+id/choosePicBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_uploadPicture"
             android:padding="15dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="@color/blueVariant2"
            android:text="@string/choose_picture" />
        <ImageView
            android:id="@+id/selectedPicture"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/uploadprofileborder"
            android:layout_below="@id/choosePicBtn"
            android:contentDescription="@string/selected_profile_picture" />
        <Button
            android:id="@+id/uploadPicBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/selectedPicture"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:padding="15dp"
            android:text="@string/upload_picture"
            android:backgroundTint="@color/blueVariant1"/>
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            />
    </RelativeLayout>

</ScrollView>