<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".Activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="130dp"
            android:backgroundTint="#9F1919"
            android:contentDescription="@string/logo"
            android:elevation="8dp"
            android:scaleType="fitXY"
            android:src="@drawable/logo" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@null"
            app:cardCornerRadius="2dp"
            app:cardElevation="5dp">

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="@string/email"
                android:background="@null"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp"
                android:paddingEnd="15dp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@null"
            app:cardCornerRadius="2dp"
            app:cardElevation="5dp">

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="@string/password"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingEnd="15dp" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <Button
                android:id="@+id/loginbtn"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#5AB0EA"
                android:text="@string/login"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="10dp"
                android:text="@string/newUser"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/registerHere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#9E2D2D"
                android:text="@string/registerHere"
                android:textColor="#036FAC"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>



    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        style="?android:attr/progressBarStyle"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        android:elevation="10dp"/>
</RelativeLayout>