<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="137dp"
                android:layout_height="128dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="#9F1919"
                android:contentDescription="@string/logo"
                android:elevation="8dp"
                android:src="@drawable/logo" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="70dp"
                android:gravity="center_horizontal|center_vertical"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="#3CC4FF"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="center_horizontal"
                    android:paddingTop="5dp"
                    android:text="@string/register"
                    android:textAppearance="@style/login"
                    android:textColor="#616161"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@null"
                app:cardCornerRadius="2dp"
                app:cardElevation="5dp">

                <EditText
                    android:id="@+id/registerName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="@string/name"
                    android:background="@null"
                    android:maxLength="32"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@null"
                app:cardCornerRadius="2dp"
                app:cardElevation="5dp">

                <EditText
                    android:id="@+id/registerPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="@string/phoneNumber"
                    android:maxLength="10"
                    android:background="@null"
                    android:hint="@string/phoneNumber"
                    android:inputType="phone"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@null"
                app:cardCornerRadius="2dp"
                app:cardElevation="5dp">

                <EditText
                    android:id="@+id/registerEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="@string/email"
                    android:background="@null"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@null"
                app:cardCornerRadius="2dp"
                app:cardElevation="5dp">

                <EditText
                    android:id="@+id/registerPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="@string/password"
                    android:background="@null"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@null"
                app:cardCornerRadius="2dp"
                app:cardElevation="5dp">
            <EditText
                android:id="@+id/registerConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="@string/confirmPassword"
                android:background="@null"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingEnd="15dp" />
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical|center_horizontal"
                >

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#45ADE8"
                android:text="@string/register"
                android:textColor="#65FA7D"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/alreadyAUser"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/clickHere"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#9E2D2D"
                    android:text="@string/clickHere"
                    android:textColor="@color/blueVariant2"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <View
                    android:id="@+id/view1"
                    android:layout_width="130dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="9dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/useOtherMethods"
                    android:textColor="@color/black" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="143dp"
                    android:layout_height="2dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="9dp"
                    android:background="@color/black" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        />


    <!--        <TextView-->
    <!--        android:id="@+id/login"-->
    <!--        android:layout_width="250dp"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:layout_marginTop="28dp"-->
    <!--        android:background="@drawable/login_box"-->
    <!--        android:elevation="8dp"-->
    <!--        android:fontFamily="@font/inter_medium"-->
    <!--        android:text="@string/login"-->
    <!--        android:textAlignment="center"-->
    <!--        android:textAppearance="@style/login"-->
    <!--        android:textSize="30sp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/imageView2" />-->

</RelativeLayout>